--- a/index.html
+++ b/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>(주)부경종합건설 내꺼</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/jquery.fullpage.css" />
+    <link rel="stylesheet" href="css/animate.min.css" />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>(주)부경종합건설 내꺼</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/jquery.fullpage.css">
-  <link rel="stylesheet" href="../css/animate.min.css">
-  <link rel="stylesheet" href="css/index.css" />
-</head>
-
-<header>
-  <div class="nav">
-    <div class="nav-wrap">
-      <div class="img"><img src="images/logo.png" alt="로고" /></div>
-      <div class="menu">
-        <div class="menu-wrap">
-          <div class="menu-inner"><a href="#">회사소개</a></div>
-          <div class="menu-inner"><a href="#">건설사업</a></div>
-          <div class="menu-inner"><a href="#">건축디사인영상</a></div>
-          <div class="menu-inner"><a href="#">고객센터</a></div>
-          <div class="menu-inner"><a href="#">인재채용</a></div>
-          <button class="web"></button>
-          <button class="mobile"></button>
-        </div>
-      </div>
-      <div class="submenu">
-        <div class="submenu-wrap">
-          <div class="submenu-blank1"></div>
-          <div class="submenu-container">
-            <ul>
-              <li><a href="#">ABOUT 부경</a></li>
-              <li><a href="#">부경 걸어온 길</a></li>
-              <li><a href="#">조직도</a></li>
-              <li><a href="#">오시는 길</a></li>
-            </ul>
-            <ul></ul>
-            <ul></ul>
-            <ul>
-              <li><a href="#">고객지원</a></li>
-              <li><a href="#">기업홍보</a></li>
-            </ul>
-            <ul>
-              <li><a href="#">인재상 & 복리후생</a></li>
-              <li><a href="#">채용안내</a></li>
-            </ul>
-            <div class="submenu-blank2"></div>
+  <header>
+    <div class="nav">
+      <div class="nav-wrap">
+        <div class="img"><img src="images/logo.png" alt="로고" /></div>
+        <div class="menu">
+          <div class="menu-wrap">
+            <div class="menu-inner"><a href="#">회사소개</a></div>
+            <div class="menu-inner"><a href="#">건설사업</a></div>
+            <div class="menu-inner"><a href="#">건축디사인영상</a></div>
+            <div class="menu-inner"><a href="#">고객센터</a></div>
+            <div class="menu-inner"><a href="#">인재채용</a></div>
+            <button class="web"></button>
+            <button class="mobile"></button>
           </div>
         </div>
-      </div>
-      <div class="m-nav">
+        <div class="submenu">
+          <div class="submenu-wrap">
+            <div class="submenu-blank1"></div>
+            <div class="submenu-container">
+              <ul>
+                <li><a href="#">ABOUT 부경</a></li>
+                <li><a href="#">부경 걸어온 길</a></li>
+                <li><a href="#">조직도</a></li>
+                <li><a href="#">오시는 길</a></li>
+              </ul>
+              <ul></ul>
+              <ul></ul>
+              <ul>
+                <li><a href="#">고객지원</a></li>
+                <li><a href="#">기업홍보</a></li>
+              </ul>
+              <ul>
+                <li><a href="#">인재상 & 복리후생</a></li>
+                <li><a href="#">채용안내</a></li>
+              </ul>
+              <div class="submenu-blank2"></div>
+            </div>
+          </div>
+        </div>
+        <div class="m-nav">
           <ul>
             <li><a href="#">회사소개</a></li>
             <li><a href="#">건설사업</a></li>
@@ -60,24 +62,29 @@
             <li><a href="#">고객센터</a></li>
             <li><a href="#">인재채용</a></li>
           </ul>
+        </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<body>
-  <div class="main fullpage">
-    <div class="main1 mainAll section">
-      <div class="section-back"></div>
+  <body>
+    <div class="main fullpage">
+      <div class="main1 mainAll section">
+        <div class="section-back"></div>
         <div class="main1-inner">
-          <strong class="is-animated">건축 문화의 새로운 가치를<br />
-            만드는 부경종합건설</strong>
+          <strong class="is-animated"
+            >건축 문화의 새로운 가치를<br />
+            만드는 부경종합건설</strong
+          >
           <em class="is-animated">
             (주)부경종합건설은 건설 분야에서 쌓은 명성과 기술 노하우를
             바탕으로<br />
             설계, 건축 및 시공, 건축디자인 등 다양한 분야에서 뛰어난 경쟁력을
-            지니고 있습니다.</em>
-          <div class="box1 is-animated more-btn"><a href="">자세히 보기</a></div>
+            지니고 있습니다.</em
+          >
+          <div class="box1 is-animated more-btn">
+            <a href="">자세히 보기</a>
+          </div>
           <div class="banner">
             <ul>
               <li class="aa">
@@ -91,48 +98,54 @@
             </ul>
           </div>
         </div>
-    </div>
-    <div class="main2 mainAll section">
-      <div class="section-back"></div>
+      </div>
+      <div class="main2 mainAll section">
+        <div class="section-back"></div>
         <div class="main2-inner">
-          <strong class="is-animated">건설사업분야<br />
+          <strong class="is-animated"
+            >건설사업분야<br />
             Construction of buildings
           </strong>
-          <em class="is-animated">부경종합건설은 BIM (building information Modeling)설계를 소규모
+          <em class="is-animated"
+            >부경종합건설은 BIM (building information Modeling)설계를 소규모
             주택시장에 도입하여<br />
             더욱 정확하고 효율적인 건축시공 관리를 하고 있습니다.
           </em>
-          <div class="box2 is-animated more-btn"><a href="">자세히 보기</a></div>
+          <div class="box2 is-animated more-btn">
+            <a href="">자세히 보기</a>
+          </div>
         </div>
-    </div>
-    <div class="main3 mainAll section">
-      <div class="section-back"></div>
+      </div>
+      <div class="main3 mainAll section">
+        <div class="section-back"></div>
         <div class="main3-inner">
-          <strong class="is-animated">건설디자인영상<br />
+          <strong class="is-animated"
+            >건설디자인영상<br />
             Video of Construction desgin
           </strong>
-          <em class="is-animated">전체적인 건물의 모습과 주변 환경을 시각화하여 클라이언트의 이해도를
+          <em class="is-animated"
+            >전체적인 건물의 모습과 주변 환경을 시각화하여 클라이언트의 이해도를
             높이고,<br />
             디자인에 대한 원활한 커뮤니케이션이 가능합니다.
           </em>
-          <div class="box3 is-animated more-btn"><a href="">자세히 보기</a></div>
+          <div class="box3 is-animated more-btn">
+            <a href="">자세히 보기</a>
+          </div>
         </div>
-    </div>
-    <div class="section footer fp-auto-height">
-      <div class="section-inner section-back none">
-        <div class="address">
-          서울특별시 마포구 동교동 113-95번지 부경빌딩
-          3,4층I대표:이남경I사업자등록번호:210-81-642255<br>
-          TEL:02-3144-4500IFAX:02-3144-0904IE-mail:bkbild2010@naver.com
+      </div>
+      <div class="section footer fp-auto-height">
+        <div class="section-inner section-back none">
+          <div class="address">
+            서울특별시 마포구 동교동 113-95번지 부경빌딩
+            3,4층I대표:이남경I사업자등록번호:210-81-642255<br />
+            TEL:02-3144-4500IFAX:02-3144-0904IE-mail:bkbild2010@naver.com
+          </div>
+          Copyright 2018.BKBUILD all rights reserved.
         </div>
-      Copyright 2018.BKBUILD all rights reserved.
       </div>
     </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="../js/jquery.fullpage.js"></script>
-  <script src="js/index.js"></script>
-  
-</body>
-
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="js/jquery.fullpage.js"></script>
+    <script src="js/index.js"></script>
+  </body>
 </html>
